--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </section>
 
 <section class="about" id="about">
-  <h1 class="heading">about as<span>why choose us</span></h1>
+  <h1 class="heading">about us<span>why choose us</span></h1>
 	<div class="row">
 	  <div class="image">
 		   <img src="images/man.jpg" alt="" >
